name:          revisions
category:      Control, Monad, Concurrency, Parallelism
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/revisions/
copyright:     Copyright (C) 2011 Edward A. Kmett
synopsis:      Deterministic concurrent revision control
description:   Deterministic concurrent revision control
build-type:    Simple

source-repository head
  type: git
  location: git://github.com/ekmett/revisions.git

library
  default-language: Haskell2010

  other-extensions:
    MagicHash,
    UnboxedTuples,
    BangPatterns,
    Rank2Types

  exposed-modules:
    Control.Concurrent.Revision

  ghc-options: -Wall -O2 -fspec-constr -fdicts-cheap

  build-depends:
    base              >= 4       && < 5,
    containers        >= 0.4     && < 0.5,
    concurrent-supply >= 0.1.1   && < 0.2,
    data-default      >= 0.3     && < 0.4,
    hashable          >= 1.1     && < 1.2,
    ghc-prim          >= 0.2     && < 0.4,
    ref-tf            >= 0.3.0.1 && < 0.4,
    mtl               >= 2.0.1   && < 2.1,
    speculation       >= 1.4     && < 1.5,
    transformers      >= 0.2.2   && < 0.3
